# adventofcode

./: .gitignore  Cargo.toml  LICENSE  README.md
2015/: new.zsh  template.rs
2015/aoc15-01/: Cargo.toml
2015/aoc15-02/: Cargo.toml
2015/aoc15-03/: Cargo.toml
2015/aoc15-04/: Cargo.toml
2015/aoc15-05/: Cargo.toml
2015/aoc15-06/: Cargo.toml
2015/aoc15-07/: Cargo.toml
2015/aoc15-08/: Cargo.toml
2015/aoc15-09/: Cargo.toml
2015/aoc15-10/: Cargo.toml
2015/aoc15-11/: Cargo.toml
2015/aoc15-12/: Cargo.toml
2015/aoc15-13/: Cargo.toml
2015/aoc15-14/: Cargo.toml
2015/aoc15-15/: Cargo.toml
2015/aoc15-16/: Cargo.toml
2015/aoc15-17/: Cargo.toml
2015/aoc15-18/: Cargo.toml
2015/aoc15-19/: Cargo.toml
2015/aoc15-20/: Cargo.toml
2015/aoc15-21/: Cargo.toml
2015/aoc15-22/: Cargo.toml
2020/: new.zsh
2020/aoc20-01/: Cargo.toml
2020/aoc20-02/: Cargo.toml
2020/aoc20-03/: Cargo.toml
2020/aoc20-04/: Cargo.toml
2020/aoc20-05/: Cargo.toml
2020/aoc20-06/: Cargo.toml
2020/aoc20-07/: Cargo.toml
2021/: new.zsh  template.rs
2021/aoc21-01/: Cargo.toml
2021/aoc21-02/: Cargo.toml
2021/aoc21-03/: Cargo.toml
2021/aoc21-04/: Cargo.toml
2021/aoc21-05/: Cargo.toml
2021/aoc21-06/: Cargo.toml
2022/: new.zsh  template.rs
2023/: new.zsh  run.zsh  template.rs
2023/aoc23-24/: Cargo.toml
2023/aoc23-24/src/: main.rs
2023/aoc23-25/: Cargo.toml
2023/aoc23-25/src/: main.rs
2024/: new.zsh
common/: Cargo.toml
common/src/: alg.rs  best.rs  graph.rs  grid.rs  legacy.rs  lib.rs  math.rs  parse.rs  plot.rs  sparse_grid.rs  three_d.rs  tree.rs
(+177 files in other folders)
