[package]
name = "aoc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
console = "0.15.0"
itertools = "0.10.3"
reqwest = {version = "0.11.13", features = ["blocking"]}

[features]
pattern = []
