[package]
name = "aoc23-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc_common = { path ="../../common" }
ndarray = "0.15.2"
ndarray-linalg = {version="0.16.0", features=["openblas-static"]}
