[package]
name = "aoc23-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc_common = { path ="../../common" }
indicatif = {version = "0.17.7",  features = ["rayon"]}
rand = "0.8.5"
rayon = "1.8.0"
